change deposit not to require amount
